31 Oct, 2018
update: add try catch to pdo query upgrade_database.php
update: class_config from cache file to site_config
update: file output format user_functions.php
update: get_birthday_users fetch to keep mysql packet size small User.php
fix: values should be an array of arrays function_autopost.php
update: set chat styles per template
update: set class colors per template
move: chat css classes into template folders
remove: unused columns from select User.php

29 Oct, 2018
fix: undefined var admin/upgrade_database.php
fix: incorrect var namr imdb_lookup.php
fix: admin memcached stats when using sockets
fix: seedtime cleanup once per userid, not once per torrent

28 Oct, 2018
update: get poster from images table when torrents.poster is empty catalog.php, browse.php 
fix: missing requires
update: get poster from images table when torrents.poster is empty index blocks
add: .well-known dir
update: breadcrumbs
update: resize signature and avatar in forums
update: version to 0.5
update: database files
fix: installer updating removed table
fix: installer remove checks for settings depecrated by MariaDB 10.3
update: README
update: global blocks

27 Oct, 2018
update: wrap sql errors in pre tabs log_viewer.php
update: remove filesize limits log_viewer.php
update: function_breadcrumbs.php
update: pagination to log_viewer.php
update: viewtickets.php
fix: flash message using html instead of bbcode tickets.php
fix: autobahn recording stats
fix: removed columns snatches.php
fix: seeders/leechers getting correct count torrents_update.php
update: update forum_config min_delete_view_class when adding/removing classes
update: edit topic, post reply to use same html
fix: forum signatures
fix: forum attachments
fix: update forum classes when adding/removing classes
fix: autoshout for new topics/replies
fix: memcached stats when using sockets
fix: polls
update: README
update: allow memcached to use sockets
update: allow mysqli to use sockets
remove: avatar folder, not used here